--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,64 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/placeFragment"
+        android:name="com.dingtuanyun.sunnyweather.ui.place.PlaceFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_editor_absoluteY="10dp"
-        tools:layout_editor_absoluteY="10dp">
+        android:layout_height="match_parent" />
 
-        <Button
-            android:id="@+id/webViewBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="跳转到WebView" />
-
-        <Button
-            android:id="@+id/networkBtn"
-            android:layout_marginTop="60dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="发送网络请求" />
-
-        <Button
-            android:id="@+id/getAppDataBtn"
-            android:layout_marginTop="60dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Get App Data" />
-
-<!--        <Button
-            android:id="@+id/bindServiceBtn"
-            android:layout_marginTop="60dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="1dp"
-            android:text="绑定后台服务" />
-
-        <Button
-            android:id="@+id/unbindServiceBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="1dp"
-            android:text="解绑后台服务" />
-
-        <Button
-            android:id="@+id/startIntenServiceBtn"
-            android:layout_marginTop="60dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="1dp"
-            android:text="启动前台Service" />-->
-
-
-    </LinearLayout>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
